[project]
name = "token-budget-orchestrator"
version = "0.1.0"
description = "Budget enforcement and policy routing for multi-agent LLM systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ricardo Martins" }
]
keywords = ["llm", "tokens", "budget", "orchestration", "multi-agent", "anthropic", "openai", "cost", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ricmmartins/tokenbudgetorchestrator"
Repository = "https://github.com/ricmmartins/tokenbudgetorchestrator"
Issues = "https://github.com/ricmmartins/tokenbudgetorchestrator/issues"
Documentation = "https://github.com/ricmmartins/tokenbudgetorchestrator#quick-start"

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.30.0"]
all = ["anthropic>=0.30.0", "openai>=1.30.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tbo"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
